--- a/src/easv/mrs/GUI/View/MovieView.fxml
+++ b/src/easv/mrs/GUI/View/MovieView.fxml
@@ -1,31 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="450.0" prefWidth="500.0" vgap="10" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.mrs.GUI.Controller.MovieViewController">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+
+<AnchorPane prefHeight="532.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.mrs.GUI.Controller.MovieViewController">
    <children>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <GridPane alignment="center" hgap="10" layoutX="14.0" layoutY="14.0" prefHeight="518.0" prefWidth="417.0" vgap="10">
+         <columnConstraints>
+            <ColumnConstraints />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
          <children>
-            <TextField fx:id="txtTitle" promptText="Title" />
-            <TextField fx:id="txtYear" promptText="Year" />
-            <Button fx:id="btnAddNew" mnemonicParsing="false" onAction="#handleAddNewMovie" text="Add New" />
+            <HBox prefHeight="30.0" prefWidth="465.0">
+               <children>
+                  <TextField fx:id="txtTitle" promptText="Title">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <TextField fx:id="txtYear" prefHeight="26.0" prefWidth="110.0" promptText="Year">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="btnAddNew" mnemonicParsing="false" onAction="#handleAddNewMovie" text="Add New">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="62.0" text="Update">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <ListView fx:id="lstMovies" prefHeight="410.0" prefWidth="457.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+               <GridPane.margin>
+                  <Insets bottom="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </ListView>
+            <TextField fx:id="txtMovieSearch" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="10.0" top="10.0" />
+               </GridPane.margin>
+            </TextField>
          </children>
-      </HBox>
-      <ListView fx:id="lstMovies" prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
-      <TextField fx:id="txtMovieSearch" GridPane.rowIndex="1" />
+      </GridPane>
    </children>
-</GridPane>
+</AnchorPane>
